committing homework 1 updates

--- a/index.html
+++ b/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title> Phil Stubbs</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	</head>
-	<body>
-		<header>
-			<p>Phil Stubbs</p>
-		</header>
-		<br><br><br?
-		<nav>
-			<a href="index.html">About</a> |
-			<a href="portfolio.html">Portfolio</a> |
-			<a href="contact.html">Contact</a>
-		</nav>
-		<section width="650px">
-			<h1>About Me</h1>
-			<hr>
-			<p>Insert info about me here</p>
-			<p>Insert info about me here</p>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Phil Stubbs</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<style> 
+	body {
+		background-image: url("assets/images/sandpaper.png");
+	}
+	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+	<header>
+		<div class="header">
+			<h1 class="name-block"><strong>Phil Stubbs</strong></h1>
+			
+			<nav class="topnav">
+				<ul>
+					<li><a href="index.html">About</a> |</li>
+					<li><a href="portfolio.html">Portfolio</a> |</li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<div class="container">
+
+		<section class="main-section">
+		<h2><strong>About Me</strong></h2>
+		<hr>
+		<p>Hi, I'm Phil,and I like problems. More specifically, I like solving problems. That's why I enrolled in the University of Minnesota coding bootcamp. My interest and desire to learn how to code came from  a passion for learning and a curiosity to learn how different web applications work. I enjoy learning about new tools, cutting edge technologies, and complex, technical concepts. </p>
+		<br>
+		<p>I am excited to begin my career as a developer so that I can build things and solve real world problems. So, I created this site to share my work with you all. Visit the <a href="portfolio.html" target="_blank">Portfolio</a> page to see some of the projects I'm working on. Feel free to explore, comment, provide feedback, and ask questions.</p>
+		<br>
+		<p>Click the icons to connect with me and learn more.
 		</section>
-		<aside>
-			<h1>Connect with Me</h1>
-			<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/if_github_square_black.svg" width="32" height="32" /></a>
-			<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/if_linkedin_square_color.svg" width="32" height="32" /></a>
-			<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/if_overflow.svg" width="32" height="28.5" /></a>
-		</aside>
-	</body>
+	
+	
+		<section class="sidebar">
+		<h2><strong>Connect with Me</strong></h2>
+		<hr>
+		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/github128.png" alt="Github logo" id="github-logo" /></a>
+		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/linkedin128.png" alt="LinkedIn logo" id="linkedin-logo"/></a>
+		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/stackoverflow128.png" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
+		</section>
+	</div>
+
+	<div>
+		<footer class="footer">
+		<p>Copyright 2017 Phil Stubbs</p>
+		</footer>
+	</div>
+	
+</body>
 </html>
