--- a/portfolio.html
+++ b/portfolio.html
@@ -1,32 +1,71 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
-		<title> Phil Stubbs</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	</head>
-	<body>
-		<header>
-			<p>Phil Stubbs</p>
-		</header>
-		<br><br><br>
-		<nav>
-			<a href="index.html">About</a> |
-			<a href="portfolio.html">Portfolio</a> |
-			<a href="contact.html">Contact</a>
-		</nav>
-		<section>
-			<h1>Porftolio</h1>
-			<hr>
-		</section>
-		
-		<aside>
-			<h1>Connect with Me</h1>
-			<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/if_github_square_black.svg" width="32" height="32" /></a>
-			<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/if_linkedin_square_color.svg" width="32" height="32" /></a>
-			<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/if_overflow.svg" width="32" height="28.5" /></a>
-		</aside>
+<html lang="en us">
 
-	
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<title>Phil Stubbs</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<style> 
+	body {
+		background-image: url("assets/images/sandpaper.png");
+	}
+	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+<div id="wrapper">
+
+	<header>
+		<div class="header">
+			<h1 class="name-block"><strong>Phil Stubbs</strong></h1>
+			
+			<nav class="topnav">
+				<ul>
+					<li><a href="index.html">About</a> |</li>
+					<li><a href="portfolio.html">Portfolio</a> |</li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<div class="container">
+		
+		<section class="main-section">
+			<h2><strong>Portfolio</strong></h2>
+			<hr>
+			<div class="portfolio-container image">
+					<img id="image1" src="assets/images/project1.png" alt="code sample">
+					<h3 id="text">Project 1</h3>
+
+					<img id="image2" src="assets/images/project1.png" alt="code sample">
+					<h3 id="text">Project 2</h3>
+
+					<img id="image3" src="assets/images/project1.png" alt="code sample">
+					<h3 id="text">Project 3</h3>
+
+					<img id="image4" src="assets/images/project1.png" alt="code sample">
+					<h3 id="text">Project 4</h3>
+
+					<img id="image5" src="assets/images/project1.png" alt="code sample">
+					<h3 id="text">Project 5</h3>
+
+			</div>
+		</section>
+		<section class="sidebar">
+		<h2><strong>Connect with Me</strong></h2>
+		<hr>
+		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/github128.png" alt="Github logo" id="github-logo" /></a>
+		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/linkedin128.png" alt="LinkedIn logo" id="linkedin-logo"/></a>
+		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/stackoverflow128.png" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
+		</section>
+	</div>
+
+	<div>
+		<footer class="footer">
+		<p>Copyright 2017 Phil Stubbs</p>
+		</footer>
+	</div>
+</div>
+</body>
 </html>
