--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,13 @@
 	}
 	</style>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script src="https://use.fontawesome.com/abd289e58f.js"></script>
 </head>
 <body>
 <div id="wrapper">
 	<header>
 		<div class="header">
-			<h1 class="name-block"><strong>Phil Stubbs</strong></h1>
+			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
 			
 			<nav class="topnav">
 				<ul>
@@ -31,7 +32,10 @@
 	<div class="container">
 		
 		<section class="main-section">
-			<h2><strong>Contact</strong></h2>
+			<h2>
+				<strong>Contact</strong> 
+				<i class="fa fa-envelope" aria-hidden="true"></i> 
+			</h2>
 			<hr>
 			<form>			
 				Name<br>
@@ -43,22 +47,22 @@
 				Message<br>
 				<textarea name="Message"></textarea>
 				<br><br>
-				<input type="submit" value="Submit"/>
+				<input type="submit" value="Submit" id="submit-button" />
 			</form>
 		</section>
 
 		<section class="sidebar">
 		<h2><strong>Connect with Me</strong></h2>
 		<hr>
-		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/github128.png" alt="Github logo" id="github-logo"/></a>
-		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/linkedin128.png" alt="LinkedIn logo" id="linkedin-logo" /></a>
-		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/stackoverflow128.png" alt="Stackoverflow logo" id="stackoverflow-logo" /></a>
+		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/if_icon-social-github_211904.svg" alt="Github logo" id="github-logo" /></a>
+		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/if_social-06_1591856.svg" alt="LinkedIn logo" id="linkedin-logo"/></a>
+		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/if_stackoverflow_313469.svg" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
 		</section>
 	</div>
 
 	<div>
 		<footer class="footer">
-		<p>Copyright 2017 Phil Stubbs</p>
+		<p>Copyright &copy; 2017 Phil Stubbs</p>
 		</footer>
 	</div>
 </div>
