--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<div class="header">
-			<h1 class="name-block"><strong>Phil Stubbs</strong></h1>
+			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
 			
 			<nav class="topnav">
 				<ul>
@@ -32,9 +32,10 @@
 		<section class="main-section">
 		<h2><strong>About Me</strong></h2>
 		<hr>
-		<p>Hi, I'm Phil,and I like problems. More specifically, I like solving problems. That's why I enrolled in the University of Minnesota coding bootcamp. My interest and desire to learn how to code came from  a passion for learning and a curiosity to learn how different web applications work. I enjoy learning about new tools, cutting edge technologies, and complex, technical concepts. </p>
+		<img src="assets/images/me.jpg" alt="head shot photo of Phil" id="headshot">
+		<p>Hi, I'm Phil, and I like problems. More specifically, I like solving problems. That's why I enrolled in the University of Minnesota coding bootcamp. My interest and desire to learn how to code came from  a passion for learning and a curiosity to learn how the web works. I enjoy learning about new tools, cutting edge technologies, and complex, technical concepts. </p>
 		<br>
-		<p>I am excited to begin my career as a developer so that I can build things and solve real world problems. So, I created this site to share my work with you all. Visit the <a href="portfolio.html" target="_blank">Portfolio</a> page to see some of the projects I'm working on. Feel free to explore, comment, provide feedback, and ask questions.</p>
+		<p>I am excited to begin my career as a developer so that I can build things and solve real world problems. As a result, I created this site to share my work with you all. Visit the <a href="portfolio.html" target="_blank">Portfolio</a> page to see some of the projects I'm working on. Feel free to explore, comment, provide feedback, and ask questions.</p>
 		<br>
 		<p>Click the icons to connect with me and learn more.
 		</section>
@@ -43,15 +44,15 @@
 		<section class="sidebar">
 		<h2><strong>Connect with Me</strong></h2>
 		<hr>
-		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/github128.png" alt="Github logo" id="github-logo" /></a>
-		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/linkedin128.png" alt="LinkedIn logo" id="linkedin-logo"/></a>
-		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/stackoverflow128.png" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
+		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/if_icon-social-github_211904.svg" alt="Github logo" id="github-logo" /></a>
+		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/if_social-06_1591856.svg" alt="LinkedIn logo" id="linkedin-logo"/></a>
+		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/if_stackoverflow_313469.svg" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
 		</section>
 	</div>
 
 	<div>
 		<footer class="footer">
-		<p>Copyright 2017 Phil Stubbs</p>
+		<p>Copyright &copy; 2017 Phil Stubbs</p>
 		</footer>
 	</div>
 	
