--- a/portfolio.html
+++ b/portfolio.html
@@ -11,19 +11,20 @@
 	}
 	</style>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script src="https://use.fontawesome.com/abd289e58f.js"></script>
 </head>
 <body>
 <div id="wrapper">
 
 	<header>
 		<div class="header">
-			<h1 class="name-block"><strong>Phil Stubbs</strong></h1>
+			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
 			
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html">About</a> |</li>
-					<li><a href="portfolio.html">Portfolio</a> |</li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a class="about-link" href="index.html">About</a> |</li>
+					<li><a class="portfolio-link" href="portfolio.html">Portfolio</a> |</li>
+					<li><a class="contact-link" href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -35,37 +36,61 @@
 			<h2><strong>Portfolio</strong></h2>
 			<hr>
 			<div class="portfolio-container image">
-					<img id="image1" src="assets/images/project1.png" alt="code sample">
-					<h3 id="text">Project 1</h3>
+					<a href="https://github.com/philipstubbs13/Project-1" target="_blank"><img id="image1" src="assets/images/project1.png" alt="code sample">
+					<h3 class="project project1">
+						Project 1
+						<i class="fa fa-github" aria-hidden="true"></i>
+					</h3>
 
-					<img id="image2" src="assets/images/project1.png" alt="code sample">
-					<h3 id="text">Project 2</h3>
+					<a href="https://github.com/philipstubbs13/Project-2" target="_blank"><img id="image2" src="assets/images/project1.png" alt="code sample">
+					<h3 class="project project2">
+					Project 2
+					<i class="fa fa-github" aria-hidden="true"></i>
+					</h3>
+					</a>
 
-					<img id="image3" src="assets/images/project1.png" alt="code sample">
-					<h3 id="text">Project 3</h3>
+					<a href="https://github.com/philipstubbs13/Project-3" target="_blank"><img id="image3" src="assets/images/project1.png" alt="code sample">
+					<h3 class="project project3">
+					Project 3
+					<i class="fa fa-github" aria-hidden="true"></i>
+					</h3>
+					</a>
 
-					<img id="image4" src="assets/images/project1.png" alt="code sample">
-					<h3 id="text">Project 4</h3>
+					<a href="https://github.com/philipstubbs13/Project-4" target="_blank"><img id="image4" src="assets/images/project1.png" alt="code sample">
+					<h3 class="project project4">
+					Project 4
+					<i class="fa fa-github" aria-hidden="true"></i>
+					</h3>
+					</a>
 
-					<img id="image5" src="assets/images/project1.png" alt="code sample">
-					<h3 id="text">Project 5</h3>
-
+					<a href="https://github.com/philipstubbs13/Project-5" target="_blank"><img id="image5" src="assets/images/project1.png" alt="code sample">
+					<h3 class="project project5">
+					Project 5
+					<i class="fa fa-github" aria-hidden="true"></i>
+					</h3>
+					</a>
 			</div>
 		</section>
+
+
 		<section class="sidebar">
-		<h2><strong>Connect with Me</strong></h2>
-		<hr>
-		<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/github128.png" alt="Github logo" id="github-logo" /></a>
-		<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/linkedin128.png" alt="LinkedIn logo" id="linkedin-logo"/></a>
-		<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/stackoverflow128.png" alt="Stackoverflow logo" id="stackoverflow-logo"/></a>
+			<h2><strong>Connect with Me</strong></h2>
+			<hr>
+
+			<a href="https://github.com/philipstubbs13" target="_blank"><img src="assets/images/if_icon-social-github_211904.svg" alt="Github logo" id="github-logo"></a>
+			<a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank"><img src="assets/images/if_social-06_1591856.svg" alt="LinkedIn logo" id="linkedin-logo"></a>
+			<a href="https://stackoverflow.com/users/8706269/phil?tab=profile" target="_blank"><img src="assets/images/if_stackoverflow_313469.svg" alt="Stackoverflow logo" id="stackoverflow-logo"></a>
 		</section>
+
 	</div>
 
 	<div>
 		<footer class="footer">
-		<p>Copyright 2017 Phil Stubbs</p>
+		<p>Copyright &copy; 2017 Phil Stubbs</p>
 		</footer>
 	</div>
+
 </div>
+
 </body>
 </html>
