finishing homework 1 changes

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en us">
+<html lang="en-us">
 
 <head>
 	<meta charset="UTF-8">
@@ -17,7 +17,7 @@
 <div id="wrapper">
 	<header>
 		<div class="header">
-			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
+			<a href="index.html"><h1 class="name-block">Phil Stubbs</h1></a>
 			
 			<nav class="topnav">
 				<ul>
@@ -37,15 +37,16 @@
 				<i class="fa fa-envelope" aria-hidden="true"></i> 
 			</h2>
 			<hr>
+			<br>
 			<form>			
 				Name<br>
-				<input name="Name" type="text" value="John Smith"> 
+				<input class="form-length" name="Name" type="text" value="John Smith"> 
 				<br><br>
 				Email<br>
-				<input name="Email" type="email" value="example@gmail.com">
+				<input class="form-length" name="Email" type="email" value="example@gmail.com">
 				<br><br>
 				Message<br>
-				<textarea name="Message"></textarea>
+				<textarea class="form-length" name="Message"></textarea>
 				<br><br>
 				<input type="submit" value="Submit" id="submit-button" />
 			</form>
@@ -62,7 +63,7 @@
 
 	<div>
 		<footer class="footer">
-		<p>Copyright &copy; 2017 Phil Stubbs</p>
+		<p>&copy; Copyright 2017 Phil Stubbs</p>
 		</footer>
 	</div>
 </div>
