--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-us">
 
 <head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<div class="header">
-			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
+			<a href="index.html"><h1 class="name-block">Phil Stubbs</h1></a>
 			
 			<nav class="topnav">
 				<ul>
@@ -32,10 +32,11 @@
 		<section class="main-section">
 		<h2><strong>About Me</strong></h2>
 		<hr>
+		<br>
 		<img src="assets/images/me.jpg" alt="head shot photo of Phil" id="headshot">
 		<p>Hi, I'm Phil, and I like problems. More specifically, I like solving problems. That's why I enrolled in the University of Minnesota coding bootcamp. My interest and desire to learn how to code came from  a passion for learning and a curiosity to learn how the web works. I enjoy learning about new tools, cutting edge technologies, and complex, technical concepts. </p>
 		<br>
-		<p>I am excited to begin my career as a developer so that I can build things and solve real world problems. As a result, I created this site to share my work with you all. Visit the <a href="portfolio.html" target="_blank">Portfolio</a> page to see some of the projects I'm working on. Feel free to explore, comment, provide feedback, and ask questions.</p>
+		<p>I am excited to begin a career in coding so that I can start to build things and solve real world problems. As a result, I created this site to share my work with you all. Visit the <a class="portfolio-link" href="portfolio.html" target="_blank">Portfolio</a> page to see some of the projects I'm working on. Feel free to explore, comment, provide feedback, and ask questions.</p>
 		<br>
 		<p>Click the icons to connect with me and learn more.
 		</section>
@@ -52,7 +53,7 @@
 
 	<div>
 		<footer class="footer">
-		<p>Copyright &copy; 2017 Phil Stubbs</p>
+		<p>&copy; Copyright 2017 Phil Stubbs</p>
 		</footer>
 	</div>
 	
