--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en us">
+<html lang="en-us">
 
 <head>
 	<meta charset="UTF-8">
@@ -18,7 +18,7 @@
 
 	<header>
 		<div class="header">
-			<a href="index.html"><h1 class="name-block"><strong>Phil Stubbs</strong></h1></a>
+			<a href="index.html"><h1 class="name-block">Phil Stubbs</h1></a>
 			
 			<nav class="topnav">
 				<ul>
@@ -36,34 +36,35 @@
 			<h2><strong>Portfolio</strong></h2>
 			<hr>
 			<div class="portfolio-container image">
-					<a href="https://github.com/philipstubbs13/Project-1" target="_blank"><img id="image1" src="assets/images/project1.png" alt="code sample">
+					<a href="https://github.com/philipstubbs13/Project-1" target="_blank"><img id="image1" src="assets/images/project1.png" alt="placeholder image 1">
 					<h3 class="project project1">
 						Project 1
 						<i class="fa fa-github" aria-hidden="true"></i>
 					</h3>
+					</a>
 
-					<a href="https://github.com/philipstubbs13/Project-2" target="_blank"><img id="image2" src="assets/images/project1.png" alt="code sample">
+					<a href="https://github.com/philipstubbs13/Project-2" target="_blank"><img id="image2" src="assets/images/tablet.jpg" alt="placeholder image 2">
 					<h3 class="project project2">
 					Project 2
 					<i class="fa fa-github" aria-hidden="true"></i>
 					</h3>
 					</a>
 
-					<a href="https://github.com/philipstubbs13/Project-3" target="_blank"><img id="image3" src="assets/images/project1.png" alt="code sample">
+					<a href="https://github.com/philipstubbs13/Project-3" target="_blank"><img id="image3" src="assets/images/phone.jpg" alt="placeholder image 3">
 					<h3 class="project project3">
 					Project 3
 					<i class="fa fa-github" aria-hidden="true"></i>
 					</h3>
 					</a>
 
-					<a href="https://github.com/philipstubbs13/Project-4" target="_blank"><img id="image4" src="assets/images/project1.png" alt="code sample">
+					<a href="https://github.com/philipstubbs13/Project-4" target="_blank"><img id="image4" src="assets/images/laptop.jpg" alt="placeholder image 4">
 					<h3 class="project project4">
 					Project 4
 					<i class="fa fa-github" aria-hidden="true"></i>
 					</h3>
 					</a>
 
-					<a href="https://github.com/philipstubbs13/Project-5" target="_blank"><img id="image5" src="assets/images/project1.png" alt="code sample">
+					<a href="https://github.com/philipstubbs13/Project-5" target="_blank"><img id="image5" src="assets/images/htmlend.jpg" alt="placeholder image 5">
 					<h3 class="project project5">
 					Project 5
 					<i class="fa fa-github" aria-hidden="true"></i>
@@ -86,7 +87,7 @@
 
 	<div>
 		<footer class="footer">
-		<p>Copyright &copy; 2017 Phil Stubbs</p>
+		<p>&copy; Copyright 2017 Phil Stubbs</p>
 		</footer>
 	</div>
 
